--- a/chrome/src/App.css
+++ b/chrome/src/App.css
@@ -1,9 +1,11 @@
 .App {
   text-align: center;
-      min-width: 500px;
-      max-width: 700px;
+      /* min-width: 380px; 
+      max-width: 380px;
       min-height: 500px;
-      max-height: 700px;
+      max-height: 500px; */
+      width: 380px;
+      height : 500px;
 }
 
 .App-logo {
