Nav바 추가 및 main, todo, reminder 컴포넌트 생성 -진현-

--- a/chrome/src/App.css
+++ b/chrome/src/App.css
@@ -1,44 +1,14 @@
-.App {
-  text-align: center;
-      /* min-width: 380px; 
-      max-width: 380px;
-      min-height: 500px;
-      max-height: 500px; */
-      width: 380px;
-      height : 500px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container__app {
+  width: 380px;
+  height : 500px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container__nav{
+  flex: 1 0 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container__pages {
+  border: 1px solid black;
+  flex: 5 0 0;
 }
