--- a/chrome/src/Pages/Todo.css
+++ b/chrome/src/Pages/Todo.css
@@ -26,7 +26,7 @@
 }
 
 .modalBackdrop {
-  position: fixed;
+  /* position: fixed;
 z-index: 999;
 top: 0;
 left: 0;
@@ -34,17 +34,33 @@ right: 0;
 bottom: 0;
 background-color: #F0FFFF;
 display: grid; 
+place-items: center; */
+position : fixed;
+z-index : 1;
+top : 0;
+left : 0;
+bottom: 0;
+right : 0;
+background-color : rgba(0,0,0,0.4);
+display : grid;
 place-items: center;
 }
 
 .modalView {
-  width: 30%;
+  /* width: 30%;
   height: 30%;
   border-radius: 10px;
   background-color: #ffffff;
   border-radius: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; */
+  width: 80%;
+height: 60%;
+background-color: #fff;
+border-radius: 10px;
+box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+display: flex;
+flex-direction : column;
 }
 
 .close_btn { 
@@ -55,7 +71,7 @@ place-items: center;
 }
 
 .desc {
-  text-align: center;
-  margin-top: 30%;
-  color: #1a237e;
+  text-align : center;
+  margin-top : 5%;
+  color: #4000c7;
 }
