add: TodoModal에 TimePicker 추가 -진현-

--- a/chrome/src/Components/TodoModal.css
+++ b/chrome/src/Components/TodoModal.css
@@ -43,8 +43,8 @@ flex-direction : column;
   cursor: pointer;
 }
 
-.desc {
+/* .desc {
   text-align : center;
   margin-top : 5%;
   color: #4000c7;
-}
+} */
