add: 로컬 스토리지 구현, CSS 초기 컨셉 레이아웃에 맞춰 구현 -정훈, 성훈, 소훈-

--- a/chrome/src/App.css
+++ b/chrome/src/App.css
@@ -12,6 +12,7 @@
   --color-grey: #eeeeee;
   --color-black: #333333;
   --color-white: #ffffff;
+  --color-background: rgba(116, 202, 231, 0.1);
   --color-btn: #74cae7;
 }
 
