--- a/chrome/src/Components/ReminderElement.css
+++ b/chrome/src/Components/ReminderElement.css
@@ -1,13 +1,27 @@
 /** reminderElement **/
 .reminderElement {
   width: 75%;
+  height: 46px;
+  padding: 10px 14px;
+  margin: 10px 20px;
+  background-color: var(--color-background);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.reminder__row {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid black;
-  border-radius: 10px;
-  padding: 5px 20px;
-  margin: 10px 20px;
+}
+
+/* reminderElement - Input Name */
+.reminder__edit__name {
+  font-size: 0.85rem;
+  flex: 1;
 }
 
 /* reminderElement - Toggle Button */
@@ -34,13 +48,47 @@
   left: 2px;
 }
 
-/* reminderElement - Input Name */
-.reminder__edit__name {
-  flex: 1;
-}
-
 /* reminderElement - Input Time */
 .reminder__edit__time {
+  flex: 9;
+  display: flex;
+  justify-content: space-between;
+}
+.reminder__adjust__time {
+  text-align: right;
+}
+.reminder__display__time {
+  font-size: 0.85rem;
+}
+
+/* reminder delete */
+.reminder__delete {
   text-align: right;
   flex: 1;
+}
+.far.fa-trash-alt {
+  color: crimson;
+}
+
+/* input range */
+input[type="range"] {
+  -webkit-appearance: none;
+  overflow: hidden;
+  height: 10px;
+  background: rgba(116, 202, 231, 0.8);
+  cursor: pointer;
+  border-radius: 5px; /* iOS */
+}
+
+input[type="range"]:focus {
+  outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  background: var(--color-blue);
+  box-shadow: -100vw 0 0 100vw var(--color-blue);
+  cursor: pointer;
 }
