--- a/chrome/src/Style/Nav.css
+++ b/chrome/src/Style/Nav.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-right: 1px solid black;
+    border-right: 1px solid #C4C4C4;
     height: 100%;
 }
 
