--- a/chrome/src/App.css
+++ b/chrome/src/App.css
@@ -19,6 +19,8 @@
 }
 
 .container__app {
+  border:1px solid #036f93;
+  border-radius: 5%;
   width: 380px;
   height: 500px;
   display: flex;
@@ -37,4 +39,3 @@
   width: 50px;
   height: 50px;
 }
-
